# devrelguide

./: .gitignore  .windsurfrules  LICENSE.txt  README.md  VISUALIZATION_TROUBLESHOOTING.md  procfile
backend/: .env  .env.sample  Procfile  README.md  procfile  pyproject.toml  requirements.txt  setup.py
backend/app/: README.md  __init__.py  auth.py  main.py
backend/app/api/: __init__.py
backend/app/api/resources/update/: route.ts
backend/app/api/visualizations/: career_path.py  community_graph.py  community_insights.py  developer_journey.py  devrel_ecosystem.py  metrics_flow.py  skills_matrix.py
backend/app/data/: blog_results.json  devrel_resources.json  github_programs_results.json  github_results.json  job_listings.json  job_results.json  metrics.json  skills_matrix.json
backend/app/models/: visualization_data.py
backend/app/scraper/: __init__.py  devrel_scraper.py
backend/app/scrapers/: devrel.ts
backend/app/scripts/: __init__.py  analyze_data.py  generate_visualizations.py  test_blog_scraper.py  test_github_scraper.py  test_scraper.py  update_resources.py  update_visualization_paths.py  verify_links.py
backend/app/visualizations/: career_path.py  community_graph.py  community_insights.py  developer_journey.py  devrel_ecosystem.py  generate_all.py  metrics_dashboard.py  metrics_flow.py  skills_matrix.py
backend/tests/: blog_posts copy.json  blog_results_copy.json  devrel_resources copy.json  github_programs_results copy.json  github_results copy.json  real_world_programs copy.json  resources copy.json  test_api.py  test_imports.py  test_scraper.py
(+243 files in other folders)
