[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
markdown = "^3.7"
python-frontmatter = "^1.1.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pytest = "^8.3.4"
pydantic = "^2.10.3"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
pandas = "^2.2.3"
numpy = "^1.26.0"
feedparser = "^6.0.10"
aiofiles = "^23.2.1"
pytest-timeout = "^2.3.1"
aiohttp = "^3.11.10"
networkx = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
